# StudyAgent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  vercel.json  vitest.config.ts
.github/scripts/: eval-summary.mjs
.github/workflows/: ci.yml  eval.yml
app/: globals.css  layout.tsx  page.tsx
app/(app)/: layout.tsx
components/auth/: LoginForm.tsx
components/chat/: ChatInterface.tsx  MessageFeedback.tsx  ToolCallDisplay.tsx
components/documents/: DeleteDocumentButton.tsx  DocumentsPolling.tsx  UploadButton.tsx
docs/: gcp-mapping.md  mcp.md
docs/adr/: 0001-proveedor-chat-multiproveedor.md  0002-evals-en-python-con-ragas.md  0003-servidor-mcp.md
evals/: README.md  compare.ts  dataset.jsonl  judge.ts  metrics.ts  pipeline.ts  runner.ts  types.ts
evals-py/: README.md  pyproject.toml
evals-py/evals_py/: __init__.py  config.py  db.py  embeddings.py  generation.py  judge.py  metrics.py  models.py  ragas_eval.py  rerank.py  runner.py  synthesize.py
evals-py/tests/: test_metrics.py
evals/__tests__/: metrics.test.ts
lib/ai/: chunker.ts  config.ts  embeddings.ts  ingest.ts  ingestion-jobs.ts  prompts.ts  provider.ts  rerank.ts  retrieval.ts  tools.ts
lib/chat/: persistence.ts
lib/observability/: traces.ts
lib/supabase/: admin.ts  client.ts  server.ts  types.ts
mcp-server/: context.ts  index.ts
mcp-server/__tests__/: context.test.ts
supabase/: config.toml  seed.sql
types/: index.ts
(+36 files in other folders)
