[project]
name = "evals-py"
version = "0.1.0"
description = "Harness de evaluación RAG de StudyAgent en Python (paridad con evals/ + métricas Ragas)"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.7,<3",
    "openai>=1.40,<2",
    "ragas>=0.2,<0.3",
    "langchain-openai>=0.2,<0.4",
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evals_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
